apps/base/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:2025.05.1
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
          volumeMounts:
            - name: pihole-mount
              mountPath: /etc/pihole
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - CHOWN

      volumes:
        - name: pihole-mount
          persistentVolumeClaim:
            claimName: pihole-pvc

      dnsPolicy: ClusterFirst
      restartPolicy: Always
