apps/base/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service
spec:
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: web
      port: 8053
      targetPort: 80 
      protocol: TCP
    - name: https
      port: 8443
      targetPort: 443
      protocol: TCP
  type: ClusterIP
